tests/should-fail/syntax/type-as-name-2.j
globals
    integer array type
endglobals
